spring cloud refresh scope learn and jvm gc performance optimization